# github-reports

./: .coveragerc  LICENSE  Makefile  README.rst  setup.cfg
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  make.bat
specs/: README.rst
tako/: __init__.py  cli.py  dependancies  github_api_test.py
tests/: test_greet.py
