[metadata]
name = tako
version = attr: tako.__version__
description = Create automated github reports
long_description = file: README.rst, HISTORY.rst
author = Sebastien Boyron
author_email = sebastien@boyron.eu
url = https://github.com/gr0und-s3ct0r/github-reports
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.cfg
install_requires =
    # TODO: put package requirements here

[options.entry_points]
console_scripts =
    tako = tako.cli:main

[options.extras_require]
testing =

    # TODO: put package testing requirements here
develop =
    coverage
    flake8
    mypy
    sphinx
    # TODO: put package develop requirements here

[options.packages.find]
exclude =
    tests
    # TODO: put exclusion patterns here

[wheel]
universal = 1
